package at.technikum.DAL.DAO;

public class MonsterCard extends Card {
}
