package at.technikum.DAL.DAO;

public class Scoreboard {

}
