package at.technikum.DAL.DAO;

public class SpellCard extends Card {
}
