package at.technikum;

public class Game {
}
