package at.technikum.game;

public enum ElementType {
    FIRE, WATER, NORMAL
}
